# Turkish-ASR-Model-Evaluation

./: .gitignore  README.md  evaluate_model.py  pyproject.toml
scripts/: run_all_evaluations.py
src/turkish_asr_eval/: __init__.py  cli.py  datasets.py
src/turkish_asr_eval/engines/: __init__.py  base.py  faster_whisper.py  nemo.py  omnilingual.py  registry.py
tests/: test_cli.py  test_dataset_spec.py  test_faster_whisper.py  test_metrics.py  test_nemo.py  test_omnilingual.py  test_registry.py
